* Updates to Array API [FuseJS LH #15] [jddalton, Joe Gornick]
  Note: Backwards compatibility warning.
   - Added Array#insert method
   - Renamed methods: include -> contains, uniq -> unique
   - Removed methods: detect, reject, reverse
   - Removed aliases: all, any, collect, entries, find, findAll, member, select
   - Updated methods:
     Array#contains: Added a strict paramter for strict only comparisons.

     Array#first: Add optional parameters to accept a number/iterator.
       * first(n): Returns an array containing the first n of the list.
       * first(iterator, [context]): Returns first item when iterator returns true.

     Array#last: Add optional parameters to accept a number/iterator.
       * last(n): Returns an array containing the last n of the list.
       * last(iterator, [context]): Returns last item when iterator returns true.

* unit test: Allow IE7+ to test "fixed" positioned elements and test String#endsWith with an empty/non-string pattern argument. [jddalton]

* Allow Object.isSameOrigin() to return true if the url ends with the document.domain which could be a suffix of the current domain. [Prototype LH #67] [jddalton, Mark Caudill, Per Melin]

* Make Object.isSameOrigin() allow urls containing default ports for http, https, and ftp protocols. [Prototype LH #301] [jddalton, Johan Gorter, Mark Caudill]

* Make Object.isSameOrigin() typecast the url as a string. [Prototype LH #251] [jddalton, mazengh]

* Move Ajax.Request#isSameOrigin to Object.isSameOrigin() so the dom:loaded event check may make use of it. [jddalton]
  Note: Backwards compatibility warning.

* Make Array#grep and Enumerable#grep exit early if the regexp pattern is empty. [jddalton]

* Optimize Hash methods by replacing calls to "each" with for-in loops as well as change Hash aliases. [Prototype LH #539] [Brad Avogel, jddalton, Romain Dorgueil]
  Note: Backwards compatibility warning.
   - Hash#index is alias of Hash#keyOf